--- a/learn/example.html
+++ b/learn/example.html
@@ -5,22 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Generated Page</title>
     <link rel="stylesheet" href="../styles/styles.css">
+    <script src="../scripts/nav.js"></script>
 </head>
 <body>
-    <header>
-        <!-- include-navbar.js -->
-    </header>
-    <main>
+<header>
+    <div id="nav-placeholder"></div>
+    <script>
+        loadNav();
+    </script>
+</header>
+<main>
 
-<h2>Example markdown file</h2>
-<p>This is a markdown example markdown file for creating manual documentation of nexilis library.</p>
+<h2>Example generated markdown file</h2>
+<p>This is a markdown example for creating manual documentation of nexilis library.</p>
 <h2>This is a smaller title</h2>
 <p>This is example text</p>
 <h3>This is a smallest title</h3>
 <p>This is an example link <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link</a>. This is another paragraph.</p>
 
     </main>
-    <script src="../scripts/include-navbar.js"></script>
 </body>
 </html>
         
