--- a/learn/index.html
+++ b/learn/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learn</title>
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="../styles/styles.css">
     <script src="../scripts/load_nav.js"></script>
 </head>
 <body>
@@ -19,7 +19,7 @@
         <p>Nexilis is currently work in progress client/server API for multiplayer game development.</p>
         <p>Stay tuned for more information in <a href="https://github.com/NexilisLib">Nexilislib github.</a></p>
         <ul>
-            <li><a href="https://github.com/nexilislib.github.io/website/learn/example.html">Generated example md</a></li>
+            <li><a href="https:/nexilislib.github.io/website/learn/example.html">Generated example md</a></li>
         </ul>
     </main>
 </body>
