--- a/learn/example.html
+++ b/learn/example.html
@@ -5,15 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Generated Page</title>
     <link rel="stylesheet" href="../styles/styles.css">
-    <script src="../scripts/nav.js"></script>
 </head>
 <body>
 <header>
     <div id="nav-placeholder"></div>
-    <script>
-        loadNav();
-    </script>
 </header>
+<script src="../scripts/load_nav.js"></script>
 <main>
 
 <h2>Example generated markdown file</h2>
